@@ -2,6 +2,9 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.9 ----------
 
+[w2l] Added support for the new StarMath keywords nospace (ignored) and prec, nprec, succ, nsucc, preccurlyeq, succcurlyeq,
+  precsim, succsim (converted)   
+
 [w2x] The minimum year in the date dialog (EPUB export) has been changed from 1900 to 1800
 
 [w2x] Bugfix: Do not create an empty footnotes page if footnotes are exported as endnotes, and the document contains no footnotess
